cleaning
bug fixing

fixing java problem

adding test execution phase

code cleaning and test fixing
